--- a/style.css
+++ b/style.css
@@ -1,40 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+
 *
 {
     box-sizing: border-box;
     padding: 0;
     margin: 0;    
+    font-family: 'Roboto',sans-serif;
 }
 
 body
 {
-    background-color: #c4c4c4;
+    background-color: #e9e9e9;
 }
 
 header
 {
     text-align: center;
-    margin: 5vh 0;
+    margin: 2vh 0;
 }
 
 h1
 {
-    font-size: 48px;
+    font-size: 80px;
 }
 
 main
 {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    gap: 7vw;
+    gap: 3vw;
+    padding: 0 3vw;
 }
 
 .grid
 {
+    justify-self: center;
     order: 1;
     display: flex;
     flex-wrap: wrap;
     border: black solid 5px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 10px 15px;
     height: 610px;
     width: 610px;
     background-color: #ffffff;
@@ -45,15 +52,59 @@ main
     display: flex;
     flex-direction: column;
     gap: 3vh;
+    background-color: #111111;
+    color: #ffffff;
+    padding: 5vh 3vw;
+    border-radius: 50px;
+    width: 23vw;
 }
 
 #color
 {
-    
-    width: 80px;
-    height: 80px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 7vw;
+    height: 10vh;
+    background-color: transparent;
     border: none;
-    border-radius: 50px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    cursor: pointer;
+}
 
+#color::-webkit-color-swatch
+{
+    border-radius: 15px;
+    border: #ffffff solid 1px;
+}
+
+#color::-moz-color-swatch
+{
+    border-radius: 15px;
+    border: #ffffff solid 1px;
+}
+
+button
+{
+    width: 15vw;
+    height: 4vh;
+    border: none;
+    border-radius: 8px;
+}
+
+button:hover
+{
+    border: #ffffff solid 1px;
+    background-color: #292929;
+    color: #ffffff;
+}
+
+button:focus
+{
+    background-color: #325ebe;
+}
+
+.active-text
+{
+    font-size: 20px;
+    font-weight: bold;
 }
